Various blog updates to latest code
Separate swapchain improvements
Various blog updates to latest code